# django-crud

./: db.sqlite3  pyproject.toml
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks_crud_project/: settings.py  urls.py
templates/: base.html  snack-create.html  snack-detail.html  snack-list.html
