[tool.poetry]
name = "django-crud"
version = "0.1.0"
description = ""
authors = ["OsbornDelAngel <ozdelangel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
